Fix Toast on mobile and documentation

--- a/src/less/documentation-swedbankpay.less
+++ b/src/less/documentation-swedbankpay.less
@@ -1233,6 +1233,7 @@
                 top: auto;
                 right: 0;
                 z-index: 0;
+                margin: initial;
 
                 .toast {
                     animation: 0s;
